# Machina

./: .clang-format  .clangd  .editorconfig  .gitignore  CMakeLists.txt  LICENSE  README.md
Source/: Source.cmake
Source/Core/: Atomic.cpp  Atomic.hpp  Concepts.hpp  Core.cmake  Core.cpp  Core.hpp  Core.natvis  Format.cpp  Format.hpp  Hash.cpp  Hash.hpp  InitializerList.hpp  Main.cpp  Memory.cpp  Memory.hpp  Primitives.hpp  Time.cpp  Time.hpp  TypeTraits.hpp  Windows.hpp
Source/Core/Async/: Fiber.cpp  Fiber.hpp  MPMC.hpp  Mutex.hpp  Scheduler.cpp  Scheduler.hpp  Thread.cpp  Thread.hpp
Source/Core/Async/AARCH64/: Fiber.cpp  Fiber.hpp
Source/Core/Async/Posix/: Thread.cpp  Thread.hpp
Source/Core/Async/Win32/: Fiber.cpp  Fiber.hpp  Thread.cpp  Thread.hpp
Source/Core/Containers/: Array.cpp  Array.hpp  Function.cpp  Function.hpp  HashMap.cpp  HashMap.hpp  NonNull.cpp  NonNull.hpp  Option.cpp  Option.hpp  Shared.cpp  Shared.hpp  SharedPtr.cpp  SharedPtr.hpp  Slice.cpp  Slice.hpp  String.cpp  String.hpp  StringView.cpp  StringView.hpp  Unique.cpp  UniquePtr.cpp  UniquePtr.hpp  Variant.hpp  WString.cpp  WString.hpp  WStringView.cpp  WStringView.hpp
Source/Core/Debug/: Assertions.hpp  Log.hpp  StackTrace.cpp  StackTrace.hpp  Test.hpp  TestMain.cpp
Source/Core/FileSystem/: Directory.hpp  File.hpp  Library.hpp
Source/Core/FileSystem/Posix/: Directory.cpp  Directory.hpp  File.cpp  File.hpp
Source/Core/FileSystem/Win32/: Directory.cpp  Directory.hpp  File.cpp  File.hpp  Library.cpp  Library.hpp
Source/Core/IO/: Directory.hpp  File.hpp  Reader.hpp  Writer.hpp
Source/Core/IO/Posix/: Directory.cpp  Directory.hpp  File.hpp
Source/Core/IO/Win32/: Directory.cpp  Directory.hpp  File.cpp  File.hpp
Source/Core/Math/: Math.cpp  Math.hpp  Matrix4.cpp  Matrix4.hpp  Quaternion.cpp  Quaternion.hpp  Vector2.cpp  Vector2.hpp  Vector3.cpp  Vector3.hpp  Vector4.cpp  Vector4.hpp
Source/Core/ObjectiveC/: Interface.hpp  Protocol.hpp
Source/DXC/: DXC.cmake  DXC.hpp
Source/Doctest/: Doctest.cmake  Doctest.cpp
Source/GPU/: Buffer.hpp  CommandList.hpp  Device.cpp  Device.hpp  Forward.hpp  GPU.cmake  GraphicsPipeline.hpp  Resource.hpp  Shader.hpp  Swapchain.hpp  Texture.hpp
Source/GPU/Drivers/D3D12/: D3D12.hpp  Device.cpp  Device.hpp
Source/GPU/Drivers/Metal/: Buffer.hpp  Buffer.mm  CommandList.hpp  CommandList.mm  Conversion.hpp  Device.hpp  Device.mm  GraphicsPipeline.hpp  Shader.hpp  Shader.mm  Swapchain.hpp  Swapchain.mm  Texture.hpp  Texture.mm
Source/GPU/Metal/: Buffer.hpp  CommandList.hpp  CommandList.mm  Device.hpp  Device.mm  GraphicsPipeline.mm  Shader.hpp  Swapchain.hpp  Swapchain.mm
Source/GUI/: Application.cpp  Application.hpp  Builder.cpp  Builder.hpp  Canvas.cpp  Canvas.hpp  GUI.cmake  Layout.cpp  Layout.hpp  Math.cpp  Math.hpp  State.cpp  State.hpp  View.hpp  Window.hpp
Source/GUI/MacOS/: Application.mm  Window.hpp  Window.mm
Source/GUI/Win32/: Application.cpp  Window.cpp  Window.hpp
Source/Programs/: Programs.cmake
Source/Programs/Sandbox/: Main.cpp  Sandbox.cmake
Source/Runtime/: Runtime.cmake
Source/Runtime/Core/: Atomic.cpp  Atomic.h  Atomic.hpp  Concepts.hpp  Core.cmake  Core.cpp  Core.h  Core.hpp  Core.natvis  Format.cpp  Format.hpp  Hash.cpp  Hash.h  Hash.hpp  InitializerList.h  InitializerList.hpp  Memory.cpp  Memory.h  Memory.hpp  Primitives.hpp  Time.cpp  Time.hpp  TypeTraits.h  TypeTraits.hpp
Source/Runtime/Core/Async/: Fiber.cpp  Fiber.hpp  MPMC.hpp  Mutex.hpp  Scheduler.cpp  Scheduler.hpp  TaskManager.cpp  TaskManager.hpp  Thread.cpp  Thread.hpp
Source/Runtime/Core/Containers/: Array.cpp  Array.h  Array.hpp  Function.cpp  Function.h  Function.hpp  HashMap.cpp  HashMap.h  HashMap.hpp  NonNull.cpp  NonNull.h  NonNull.hpp  Option.cpp  Option.h  Option.hpp  Shared.cpp  Shared.h  Shared.hpp  Slice.cpp  Slice.h  Slice.hpp  String.cpp  String.h  String.hpp  StringView.cpp  StringView.h  StringView.hpp  Unique.cpp  Unique.h  Unique.hpp  WString.cpp  WString.h  WString.hpp  WStringView.cpp  WStringView.h  WStringView.hpp
Source/Runtime/Core/Debug/: Assertions.h  Assertions.hpp  Log.hpp  StackTrace.cpp  StackTrace.hpp  Test.h  Test.hpp  TestMain.cpp
Source/Runtime/Core/IO/: Directory.hpp  File.hpp  Reader.hpp  Writer.hpp
Source/Runtime/Core/Math/: Math.cpp  Math.h  Math.hpp  Matrix4.cpp  Matrix4.h  Matrix4.hpp  Quaternion.cpp  Quaternion.h  Quaternion.hpp  Vector2.cpp  Vector2.h  Vector2.hpp  Vector3.cpp  Vector3.h  Vector3.hpp  Vector4.cpp  Vector4.h  Vector4.hpp
Source/Runtime/Core/ObjectiveC/: Interface.hpp  Protocol.hpp
Source/Runtime/GPU/: Buffer.hpp  CommandList.hpp  Device.cpp  Device.hpp  Forward.hpp  GPU.cmake  GraphicsPipeline.hpp  Resource.hpp  Shader.hpp  Swapchain.hpp  Texture.hpp
Source/Runtime/GPU/Metal/: Buffer.hpp  Buffer.mm  CommandList.hpp  CommandList.mm  Conversion.hpp  Device.hpp  Device.mm  GraphicsPipeline.hpp  GraphicsPipeline.mm  Shader.hpp  Shader.mm  Swapchain.hpp  Swapchain.mm  Texture.hpp  Texture.mm
Source/Runtime/GUI/: Application.hpp  GUI.cmake  View.hpp  Window.hpp
Source/Runtime/GUI/MacOS/: Application.mm  Window.hpp  Window.mm
Source/Runtime/GUI/Win32/: Application.cpp  Window.cpp  Window.hpp
Source/Runtime/Gui/: Application.h  Application.hpp  Gui.cmake  View.hpp  Window.h  Window.hpp
Source/Runtime/Gui/MacOS/: Application.mm  Window.h  Window.hpp  Window.mm
Source/Runtime/Gui/Win32/: Application.cpp  Window.cpp  Window.h  Window.hpp
Source/Sandbox/: Main.cpp  Sandbox.cmake
src/: src.cmake
src/programs/: programs.cmake
src/programs/sandbox/: main.cpp  sandbox.cmake
src/runtime/: runtime.cmake
src/runtime/core/: assertions.h  concepts.h  core.cmake  core.cpp  core.h  core.natvis  hash.cpp  hash.h  initializer_list.h  memory.cpp  memory.h  primitives.h  test_main.cpp  type_traits.h
src/runtime/core/containers/: array.cpp  array.h  function.cpp  function.h  hash_map.cpp  hash_map.h  non_null.cpp  non_null.h  option.cpp  option.h  shared.cpp  shared.h  slice.cpp  slice.h  string.cpp  (+9 more)
src/runtime/gui/: application.h  gui.cmake  macos_application.mm  macos_window.mm  window.h
(+35 files in other folders)
